feat(native): working on more flexibility on dispatch